tests/security/taintedInParentLoader/output.txt
ERROR: TaintedData - input.hack:15:25 - Data from a URL query string found its way to a SQL query using path $_GET --array-fetch--> $_GET['user_id'] (input.hack:27:25) ----> call to C::foo (input.hack:27:16) ----> C::foo#1 (input.hack:22:32) ----> $user_id (input.hack:22:32) ----> call to AGrandChild::loadFull (input.hack:23:31) ----> AGrandChild::loadFull#1 (input.hack:4:44) ----> A::loadFull#1 (input.hack:23:31) ----> $sink (input.hack:4:44) ----> call to A::loadPartial (input.hack:5:29) ----> A::loadPartial#1 (input.hack:2:56) ----> AChild::loadPartial#1 ----> $sink (input.hack:14:47) ----> composition (input.hack:15:25) ----> call to AsyncMysqlConnection::query (input.hack:15:25) ----> AsyncMysqlConnection::query#1 (hhi_embedded_stdlib/builtins_async_mysql.hhi:181:14)